Many improvements better bluetooth handling consolidate sensors into a single device accept an existing auth_key during setup (alpha!)

--- a/translations/en.json
+++ b/translations/en.json
@@ -17,9 +17,11 @@
             },
             "user": {
                 "data": {
-                    "host": "Host",
-                    "password": "Password",
-                    "username": "Username"
+                    "auth_token": "Access token",
+                    "device": "Device"
+                },
+                "data_description": {
+                    "auth_token": "Optional"
                 }
             }
         }
